--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,48 @@
-img{
-    width : 600px;
-    height : 300px;
+
+/* Partie logo*/
+#logo{
+    height: 120px;
+}
+/* Partie slider*/
+#slider {
+    margin: 0;
+    padding: 0;
+    margin-top:40px;
+  }
+  
+  #diapo {
+    width: 100%;
+    height: 550px;
+  }
+
+
+#prevBtn {
     position: absolute;
     top: 50%;
+    float: left;
+    left: 2%;
+    font-size: 3em;
+    color: whitesmoke;
+  }
+  
+#nextBtn {
+    position: absolute;
+    top: 50%;
+    float: right;
+    right: 2%;
+    font-size: 3em;
+    color: whitesmoke;
+}
+#pauseBtn{
+    position: absolute;
+    top:75%;
+    font-size:2em;    
+    color: whitesmoke;
+    margin: 0 auto;
     left: 50%;
-    transform: translate(-50%, -50%);
+}
+#mapid { 
+    margin: 20px;
+    width: 60%;
+    height: 500px; 
 }
