--- a/css/style.css
+++ b/css/style.css
@@ -42,7 +42,30 @@
     left: 50%;
 }
 #mapid { 
-    margin: 20px;
     width: 60%;
-    height: 500px; 
+    height: 650px; 
+    box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+}
+#bloc_station{
+  width: 22%;
+  opacity: 0;
+  -webkit-transition: all 0.5s ease-in-out;
+  -moz-transition: all 0.5s ease-in-out;
+  -ms-transition: all 0.5s ease-in-out;
+  -o-transition: all 0.5s ease-in-out;
+  transition: all 0.5s ease-in-out;
+  box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+}
+.fa-cc-mastercard{
+  font-size: 2em ;
+}
+#booking{
+  opacity :0;
+}
+
+#station_address{
+  height: 55px !important;
+}
+#station_name {
+  height:  30px !important;
 }
