--- a/css/style.css
+++ b/css/style.css
@@ -1,52 +1,55 @@
-
 /* Partie logo*/
-#logo{
-    height: 120px;
+#logo {
+  height: 120px;
 }
+
 /* Partie slider*/
 #slider {
-    margin: 0;
-    padding: 0;
-    margin-top:40px;
-  }
-  
-  #diapo {
-    width: 100%;
-    height: 550px;
-  }
+  margin: 0;
+  padding: 0;
+  margin-top: 40px;
+}
+
+#diapo {
+  width: 100%;
+  height: 550px;
+}
 
 
 #prevBtn {
-    position: absolute;
-    top: 50%;
-    float: left;
-    left: 2%;
-    font-size: 3em;
-    color: whitesmoke;
-  }
-  
+  position: absolute;
+  top: 50%;
+  float: left;
+  left: 2%;
+  font-size: 3em;
+  color: whitesmoke;
+}
+
 #nextBtn {
-    position: absolute;
-    top: 50%;
-    float: right;
-    right: 2%;
-    font-size: 3em;
-    color: whitesmoke;
+  position: absolute;
+  top: 50%;
+  float: right;
+  right: 2%;
+  font-size: 3em;
+  color: whitesmoke;
 }
-#pauseBtn{
-    position: absolute;
-    top:75%;
-    font-size:2em;    
-    color: whitesmoke;
-    margin: 0 auto;
-    left: 50%;
+
+#pauseBtn {
+  position: absolute;
+  top: 75%;
+  font-size: 2em;
+  color: whitesmoke;
+  margin: 0 auto;
+  left: 50%;
 }
-#mapid { 
-    width: 60%;
-    height: 650px; 
-    box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+
+#mapid {
+  width: 60%;
+  height: 650px;
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
 }
-#bloc_station{
+
+#bloc_station {
   width: 22%;
   opacity: 0;
   -webkit-transition: all 0.5s ease-in-out;
@@ -54,19 +57,42 @@
   -ms-transition: all 0.5s ease-in-out;
   -o-transition: all 0.5s ease-in-out;
   transition: all 0.5s ease-in-out;
-  box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
-}
-.fa-cc-mastercard{
-  font-size: 2em ;
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
 }
 
-#station_address{
+.fa-cc-mastercard {
+  font-size: 2em;
+}
+
+#station_address {
   height: 55px !important;
 }
+
 #station_name {
-  height:  30px !important;
+  height: 30px !important;
 }
 
-#booking{
-  display: none;  
+#booking {
+  display: none;
+}
+
+.booking_over {
+  color: red;
+  font-weight: bold;
+}
+
+#current_booking {
+  display: none;
+}
+
+.closed {
+  background-color: red;
+  color: white;
+  padding: 10px;
+}
+
+.open {
+  background-color: #2abe04;
+  color: white;
+  padding: 10px;
 }
