mise à jour des fonctionnalités liés au timer

--- a/css/style.css
+++ b/css/style.css
@@ -97,10 +97,17 @@
   padding: 10px;
 }
 
-.available_bike {
+.available_bikes {
   color: #2abe04;
   padding: 10px;
   border: 1px solid #2abe04;
+}
+
+.available_bikes:before {
+  font-family: "Font Awesome 5 Free";
+  font-weight: 900;
+  content: "\f206";
+  margin-right: 2px;
 }
 
 .available_bike_stand {
@@ -113,4 +120,14 @@
   color: red;
   padding: 10px;
   border: 1px solid red;
+}
+
+#canvas {
+  border: 1px solid black;
+}
+
+.no_bike {
+  color: red;
+  border: 1px solid red;
+  padding: 10px;
 }
