--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,11 @@
 /* Partie logo*/
+body {
+  background-color: #21242b !important;
+}
+
 #logo {
   height: 120px;
+  z-index: 3000;
 }
 
 /* Partie slider*/
@@ -15,7 +20,7 @@
   height: 550px;
 }
 
-
+/* 
 #prevBtn {
   position: absolute;
   top: 50%;
@@ -50,16 +55,18 @@
   color: whitesmoke;
   margin: 0 auto;
   right: 45%;
-}
+} */
 
 #mapid {
   width: 60%;
   height: 650px;
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
+  border-radius: 2px;
 }
 
+/*Div contenant les informations station et formulaire*/
 #bloc_station {
-  width: 22%;
+  width: 20%;
   opacity: 0;
   -webkit-transition: all 0.5s ease-in-out;
   -moz-transition: all 0.5s ease-in-out;
@@ -67,6 +74,9 @@
   -o-transition: all 0.5s ease-in-out;
   transition: all 0.5s ease-in-out;
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
+  background-color: rgba(204, 204, 204);
+  border-radius: 2px;
+
 }
 
 .fa-cc-mastercard {
@@ -75,10 +85,13 @@
 
 #station_address {
   height: 55px !important;
+  padding: 8px;
+  text-justify: auto;
 }
 
 #station_name {
   height: 30px !important;
+  width: 80% !important;
 }
 
 #booking {
@@ -100,8 +113,10 @@
   padding: 10px;
 }
 
+/*Style de "Station ouverte*/
 .open {
-  background-color: #2abe04;
+  /*background-color: #2abe04;*/
+  background-color: #4BBF73;
   color: white;
   padding: 10px;
 }
@@ -151,4 +166,38 @@
 
 #error_sign {
   color: red;
+}
+
+footer {
+  border-top: 5px solid #20232a;
+  color: #ddd1c3 !important;
+  background-color: #2c2f38 !important;
+}
+
+nav {
+  border-bottom: 5px solid #20232a;
+  background-color: #2c2f38 !important;
+}
+
+nav h1 {
+  color: white !important;
+}
+
+nav li {
+  z-index: 2999;
+}
+
+.lign-color {
+  position: absolute;
+  width: 590px;
+  height: 70px;
+  left: 20px;
+  background-color: #fd703b !important;
+  border-radius: 2px;
+}
+
+#color-title {
+  color: #83838354 !important;
+  font-size: 3em;
+  font-weight: bold !important;
 }
