--- a/css/style.css
+++ b/css/style.css
@@ -74,9 +74,8 @@ body {
   -o-transition: all 0.5s ease-in-out;
   transition: all 0.5s ease-in-out;
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
-  background-color: rgba(204, 204, 204);
   border-radius: 2px;
-
+  background-color: white;
 }
 
 .fa-cc-mastercard {
@@ -148,6 +147,7 @@ body {
 
 #canvas {
   border: 1px solid black;
+  background-color: white;
 }
 
 .no_bike {
@@ -187,17 +187,15 @@ nav li {
   z-index: 2999;
 }
 
-.lign-color {
-  position: absolute;
-  width: 590px;
-  height: 70px;
-  left: 20px;
-  background-color: #fd703b !important;
-  border-radius: 2px;
+#color-title {
+  color: #838383ca !important;
+  font-weight: bold !important;
 }
 
-#color-title {
-  color: #83838354 !important;
-  font-size: 3em;
-  font-weight: bold !important;
+#bookingStation {
+  color: #1F9BCF !important;
+}
+
+#your_booking {
+  color: #ddd1c3 !important;
 }
