--- a/css/style.css
+++ b/css/style.css
@@ -15,47 +15,59 @@ body {
   margin-top: 40px;
 }
 
-#diapo {
+#slides {
   width: 100%;
   height: 550px;
+  position: relative;
+
 }
 
-/* 
-#prevBtn {
+#slides ul {
+  list-style-type: none;
+}
+
+.slide {
   position: absolute;
-  top: 50%;
-  float: left;
-  left: 2%;
-  font-size: 3em;
-  color: whitesmoke;
+  left: 0;
+  top: 0;
+  height: 500px;
+  width: 100%;
+  opacity: 0;
+
+  -webkit-transition: opacity 1s;
+  -moz-transition: opacity 1s;
+  -o-transition: opacity 1s;
+  transition: opacity 1s;
+}
+
+.showing {
+  opacity: 1;
+
+}
+
+#prevBtn {
+  font-size: 2em;
+  color: rgb(246, 121, 4) !important;
+  position: absolute;
+  top: 60%;
+  left: 20px;
 }
 
 #nextBtn {
+  font-size: 2em;
+  color: rgb(246, 121, 4) !important;
   position: absolute;
-  top: 50%;
-  float: right;
-  right: 2%;
-  font-size: 3em;
-  color: whitesmoke;
+  top: 60%;
+  right: 20px;
 }
+
 
 #pauseBtn {
-  position: absolute;
-  top: 75%;
+  color: rgb(246, 121, 4) !important;
   font-size: 2em;
-  color: whitesmoke;
-  margin: 0 auto;
-  left: 45%;
+  position: absolute;
+  top: 90%;
 }
-
-#playBtn {
-  position: absolute;
-  top: 75%;
-  font-size: 2em;
-  color: whitesmoke;
-  margin: 0 auto;
-  right: 45%;
-} */
 
 #mapid {
   width: 60%;
