--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,42 @@
-/* Partie logo*/
 body {
   background-color: #21242b !important;
 }
 
+footer {
+  border-top: 5px solid #20232a;
+  color: #ddd1c3 !important;
+  background-color: #2c2f38 !important;
+}
+
+nav {
+  border-bottom: 5px solid #20232a;
+  background-color: #2c2f38 !important;
+}
+
+nav h1 {
+  color: white !important;
+}
+
+nav li {
+  z-index: 2999;
+}
+
+#color-title {
+  color: #838383ca !important;
+  font-weight: bold !important;
+}
+
+/*/////////////////////////////////////////////////////////////////
+/* LOGO
+////////////////////////////////////////////////////////////////*/
 #logo {
   height: 120px;
   z-index: 3000;
 }
 
-/* Partie slider*/
+/*/////////////////////////////////////////////////////////////////
+/* SLIDER
+////////////////////////////////////////////////////////////////*/
 #slider {
   margin: 0;
   padding: 0;
@@ -69,6 +97,17 @@ body {
   top: 90%;
 }
 
+#playBtn {
+  color: rgb(246, 121, 4) !important;
+  font-size: 2em;
+  position: absolute;
+  top: 90%;
+  display: none;
+}
+
+/*/////////////////////////////////////////////////////////////////
+/* MAP
+////////////////////////////////////////////////////////////////*/
 #mapid {
   width: 60%;
   height: 650px;
@@ -126,7 +165,6 @@ body {
 
 /*Style de "Station ouverte*/
 .open {
-  /*background-color: #2abe04;*/
   background-color: #4BBF73;
   color: white;
   padding: 10px;
@@ -157,11 +195,6 @@ body {
   border: 1px solid red;
 }
 
-#canvas {
-  border: 1px solid black;
-  background-color: white;
-}
-
 .no_bike {
   color: red;
   border: 1px solid red;
@@ -180,34 +213,31 @@ body {
   color: red;
 }
 
-footer {
-  border-top: 5px solid #20232a;
-  color: #ddd1c3 !important;
-  background-color: #2c2f38 !important;
+/*/////////////////////////////////////////////////////////////////
+/* CANVAS
+////////////////////////////////////////////////////////////////*/
+#canvas {
+  border: 1px solid black;
+  background-color: white;
 }
 
-nav {
-  border-bottom: 5px solid #20232a;
-  background-color: #2c2f38 !important;
-}
-
-nav h1 {
-  color: white !important;
-}
-
-nav li {
-  z-index: 2999;
-}
-
-#color-title {
-  color: #838383ca !important;
-  font-weight: bold !important;
-}
-
+/*/////////////////////////////////////////////////////////////////
+/* RESERVATION
+////////////////////////////////////////////////////////////////*/
 #bookingStation {
   color: rgb(246, 121, 4) !important
 }
 
 #your_booking {
   color: #ddd1c3 !important;
+}
+
+.border_booking {
+  border: 1px solid rgb(246, 121, 4) !important;
+  padding: 20px 30px 20px 30px;
+  border-radius: 5px;
+}
+
+#timer {
+  color: rgb(246, 121, 4) !important;
 }
