--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,11 @@ nav li {
   color: #838383ca !important;
   font-weight: bold !important;
 }
-
+#name, #fn{
+  background-color: #21242b !important;
+  border-bottom: 1px solid rgb(246, 121, 4) !important;;
+  color : rgb(246, 121, 4) !important;
+}
 /*/////////////////////////////////////////////////////////////////
 /* LOGO
 ////////////////////////////////////////////////////////////////*/
@@ -45,7 +49,7 @@ nav li {
 
 #slides {
   width: 100%;
-  height: 550px;
+  height: 500px;
   position: relative;
 
 }
@@ -76,32 +80,32 @@ nav li {
 #prevBtn {
   font-size: 2em;
   color: rgb(246, 121, 4) !important;
-  position: absolute;
+  /* position: absolute;
   top: 60%;
-  left: 20px;
+  left: 20px; */
 }
 
 #nextBtn {
   font-size: 2em;
   color: rgb(246, 121, 4) !important;
-  position: absolute;
+  /* position: absolute;
   top: 60%;
-  right: 20px;
+  right: 20px; */
 }
 
 
 #pauseBtn {
   color: rgb(246, 121, 4) !important;
   font-size: 2em;
-  position: absolute;
-  top: 90%;
+  /* position: absolute;
+  top: 90%; */
 }
 
 #playBtn {
   color: rgb(246, 121, 4) !important;
   font-size: 2em;
-  position: absolute;
-  top: 90%;
+  /* position: absolute;
+  top: 90%; */
   display: none;
 }
 
@@ -109,7 +113,7 @@ nav li {
 /* MAP
 ////////////////////////////////////////////////////////////////*/
 #mapid {
-  width: 60%;
+  /* width: 60%; */
   height: 650px;
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
   border-radius: 2px;
@@ -118,7 +122,7 @@ nav li {
 
 /*Div contenant les informations station et formulaire*/
 #bloc_station {
-  width: 20%;
+  /* width: 20%; */
   opacity: 0;
   -webkit-transition: all 0.5s ease-in-out;
   -moz-transition: all 0.5s ease-in-out;
@@ -181,11 +185,12 @@ nav li {
 }
 
 .available_bikes {
-  color: white;
-  background-color: #2abe04;
+  color:  #2abe04;
+  /* background-color: #2abe04; */
   padding: 10px;
-  border: 1px solid white;
-  border-radius: 4px;
+  font-weight: bold;
+  /* border: 1px solid white;
+  border-radius: 4px; */
 }
 
 .available_bikes:before {
@@ -196,11 +201,12 @@ nav li {
 }
 
 .available_bike_stand {
-  background-color: #2abe04;
-  color: white;
+  /* background-color: #2abe04; */
+  color:  #2abe04;
   padding: 10px;
-  border: 1px solid white;
-  border-radius: 4px;
+  /* border: 1px solid white; */
+  /* border-radius: 4px; */
+  font-weight: bold;
 }
 
 .no_available_stand {
@@ -235,8 +241,8 @@ nav li {
 /* CANVAS
 ////////////////////////////////////////////////////////////////*/
 #canvas {
-  border: 1px solid black;
-  background-color: white;
+  border: 1px solid rgb(246, 121, 4) !important;
+  background-color: whitesmoke !important;
 }
 
 /*/////////////////////////////////////////////////////////////////
