--- a/js/Class/css/style.css
+++ b/js/Class/css/style.css
@@ -51,10 +51,10 @@ nav li {
 }
 
 #slides {
-  width: 80%;
-  height: 400px;
+  width: 100%;
+  height: 500px;
   position: relative;
-  margin: auto;
+
 }
 
 #slides ul {
@@ -65,7 +65,7 @@ nav li {
   position: absolute;
   left: 0;
   top: 0;
-  height: 400px;
+  height: 500px;
   width: 100%;
   opacity: 0;
 
@@ -116,8 +116,7 @@ nav li {
 /* MAP
 ////////////////////////////////////////////////////////////////*/
 #mapid {
-  width: 80%;
-  margin: auto;
+  /* width: 60%; */
   height: 650px;
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
   border-radius: 2px;
