--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,7 @@ nav li {
 }
 
 #color-title {
-  color: #838383ca !important;
+  color: #a1a1a1ca !important;
   font-weight: bold !important;
 }
 
@@ -51,10 +51,10 @@ nav li {
 }
 
 #slides {
-  width: 100%;
-  height: 500px;
+  width: 80%;
+  height: 400px;
   position: relative;
-
+  margin: auto;
 }
 
 #slides ul {
@@ -65,7 +65,7 @@ nav li {
   position: absolute;
   left: 0;
   top: 0;
-  height: 500px;
+  height: 400px;
   width: 100%;
   opacity: 0;
 
@@ -116,7 +116,8 @@ nav li {
 /* MAP
 ////////////////////////////////////////////////////////////////*/
 #mapid {
-  /* width: 60%; */
+  width: 80%;
+  margin: auto;
   height: 650px;
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
   border-radius: 2px;
