--- a/js/Class/css/style.css
+++ b/js/Class/css/style.css
@@ -22,7 +22,7 @@ nav li {
 }
 
 #color-title {
-  color: #a1a1a1ca !important;
+  color: #838383ca !important;
   font-weight: bold !important;
 }
 
@@ -51,10 +51,10 @@ nav li {
 }
 
 #slides {
-  width: 80%;
-  height: 400px;
+  width: 100%;
+  height: 500px;
   position: relative;
-  margin: auto;
+
 }
 
 #slides ul {
@@ -65,7 +65,7 @@ nav li {
   position: absolute;
   left: 0;
   top: 0;
-  height: 400px;
+  height: 500px;
   width: 100%;
   opacity: 0;
 
@@ -83,22 +83,32 @@ nav li {
 #prevBtn {
   font-size: 2em;
   color: rgb(246, 121, 4) !important;
+  /* position: absolute;
+  top: 60%;
+  left: 20px; */
 }
 
 #nextBtn {
   font-size: 2em;
   color: rgb(246, 121, 4) !important;
+  /* position: absolute;
+  top: 60%;
+  right: 20px; */
 }
 
 
 #pauseBtn {
   color: rgb(246, 121, 4) !important;
   font-size: 2em;
+  /* position: absolute;
+  top: 90%; */
 }
 
 #playBtn {
   color: rgb(246, 121, 4) !important;
   font-size: 2em;
+  /* position: absolute;
+  top: 90%; */
   display: none;
 }
 
@@ -106,8 +116,7 @@ nav li {
 /* MAP
 ////////////////////////////////////////////////////////////////*/
 #mapid {
-  width: 80%;
-  margin: auto;
+  /* width: 60%; */
   height: 650px;
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
   border-radius: 2px;
@@ -116,6 +125,7 @@ nav li {
 
 /*Div contenant les informations station et formulaire*/
 #bloc_station {
+  /* width: 20%; */
   opacity: 0;
   -webkit-transition: all 0.5s ease-in-out;
   -moz-transition: all 0.5s ease-in-out;
@@ -179,8 +189,11 @@ nav li {
 
 .available_bikes {
   color: #2abe04;
+  /* background-color: #2abe04; */
   padding: 10px;
   font-weight: bold;
+  /* border: 1px solid white;
+  border-radius: 4px; */
 }
 
 .available_bikes:before {
@@ -191,8 +204,11 @@ nav li {
 }
 
 .available_bike_stand {
+  /* background-color: #2abe04; */
   color: #2abe04;
   padding: 10px;
+  /* border: 1px solid white; */
+  /* border-radius: 4px; */
   font-weight: bold;
 }
 
@@ -251,9 +267,4 @@ nav li {
 
 #timer {
   color: rgb(246, 121, 4) !important;
-}
-
-/*Cache les labels*/
-.cache {
-  display: none;
 }
